# todo-api

./: Cargo.toml  README.md
migrations/2020-05-09-171601_create_categories/: down.sql  up.sql
migrations/2020-05-13-171507_change_id_type/: down.sql  up.sql
src/: executor.rs  lib.rs  main.rs  schema.rs  state.rs
src/categories/: mod.rs  models.rs  routes.rs
tests/: health_check.rs
