[package]
name = "api_todo_io"
version = "0.1.0"
authors = ["alexandru"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1"
serde = "1.0.106"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
actix = "0.9.0"
uuid = { version = "0.6.5", features = ["serde", "v4"] }